--- a/src/components/Coffee.css
+++ b/src/components/Coffee.css
@@ -15,6 +15,8 @@
   margin: 1rem auto 0;
   background: url('../icons/coffee.svg');
   background-size: 12rem;
+  /* Center coffee cup */
+  transform: translate(1rem);
   height: 12rem;
   width: 12rem;
 }
